--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -202,6 +202,10 @@
     --success:     92 28% 65%;  /* #a3be8c */
     --info:        213 32% 52%; /* #5e81ac */
     --primary:        210 34% 63%; /* #81a1c1 */
+
+        --newspaper-light: 0 0% 45%;
+    --newspaper-muted: 180 1% 30%;
+    --newspaper-gray: 0 0% 60%;
   }
 
   .light {
@@ -213,6 +217,10 @@
     --foreground: var(--neutral-600);
     --foreground: 0 0% 32%;
     --foreground: 0 0% 20%;
+    --foreground: 0 0% 15%;
+
+    --foreground-light: var(--newspaper-light);
+    --foreground-light: 0 0% 43%;
 
     /* --foreground-muted:var(--colors-gray-dark-900);
     --foreground-lighter:var(--colors-gray-dark-1000);
@@ -225,6 +233,7 @@
     --secondary: 240 4.8% 90.0%;
     --secondary-foreground: 240 5.9% 10%;
     --accent: 240 4.8% 95.9%;
+    --accent: 240 4.8% 94.0%;
     --accent-foreground: 240 5.9% 10%;
     --muted: 0 0% 90%;
     --muted-foreground: var(--foreground-lighter);
@@ -249,9 +258,13 @@
   .dark {
     --background: 0 0% 9%;
   /* --background:var(--colors-gray-dark-200); */
+    --background:  240 6% 10%;
     --foreground: 0 0% 93%;
     --foreground-light: 0 0% 63%;
     --foreground-lighter: 0 0% 49%;
+
+
+    --foreground-light: var(--newspaper-gray);
 
   --foreground-muted:var(--colors-gray-dark-900);
   --foreground-lighter:var(--colors-gray-dark-1000);
